2006-07-25  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* examples/book/recent_files/examplewindow.cc:
	* examples/book/recent_files/examplewindow.h: Fix recent files example so
	that it actually pops up a dialog when you select the recent files menu
	item.  Also added _mnemonics to menu items for easy keyboard navigation :)

2006-07-25  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/printing/advanced/printformoperation.cc:
	* examples/book/printing/advanced/printformoperation.h: Uncomment out 
	the on_preview() override again, and add an if that shows that m_refLayout is 
	null, because on on_begin_print() has never been called.

2006-07-25  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/printing/advanced/examplewindow.cc:
	* examples/book/printing/advanced/printformoperation.cc:
	* examples/book/printing/advanced/printformoperation.h:
	* examples/book/printing/simple/examplewindow.cc: Made the two examples more 
	like each other, so that it is more obvious what is causing the crash, 
	though I commented out the crashing override, with a comment.


2006-07-24  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/tutorial/gtkmm-tut.xml: Added preliminary chapter on using the new
	recent files API (RecentManager, RecentChooser, etc).  I really think that
	the recent_files example could use some simplification, but I haven't
	tackled that at all yet.  I'm going to leave out any UIManager / Recent
	files integration for now since it seems like it will be a big manual hack
	until GtkRecentAction gets introduced in GTK+ 2.12
	* examples/book/recent_files/Makefile.am: renamed the executable name that
	seemed to be a copy-paste error and was rather confusing

2.9.9:

2006-07-24  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Depend on glibmm 2.11.3 so that the new defines are available 
	for the (default) --enable-api-default-signal-handlers=yes case.
	* gtk/src/printcontext.hg:
	* gtk/src/printer.hg:
	* gtk/src/printjob.hg: