@@ -8433,12 +8433,23 @@ _CLASS_BOXEDTYPE_STATIC(Rectangle, GdkRectangle)
 
 <sect3>
 <title>_CLASS_OPAQUE_COPYABLE</title>
-<para>This macro declares a wrapper for a reference-counted opaque struct. The C++ wrapper can not be directly
-instantiated and can only be used with Glib::RefPtr.</para>
+<para>This macro declares a wrapper for an opaque struct that has copy and free functions. The new, copy and free functions will be used to instantiate the default constructor, copy constructor and destructor.</para>
 <para><function>_CLASS_OPAQUE_COPYABLE( C++ class, C class, new function, copy function, free function )</function></para>
 <para>For instance, for Gdk::Region:
 <programlisting>
 _CLASS_OPAQUE_COPYABLE(Region, GdkRegion, gdk_region_new, gdk_region_copy, gdk_region_destroy)
+</programlisting>
+</para>
+</sect3>
+
+<sect3>
+<title>_CLASS_OPAQUE_REFCOUNTED</title>
+<para>This macro declares a wrapper for a reference-counted opaque struct. The C++ wrapper can not be directly
+instantiated and can only be used with Glib::RefPtr.</para>
+<para><function>_CLASS_OPAQUE_COPYABLE( C++ class, C class, new function, ref function, unref function )</function></para>
+<para>For instance, for Pango::Coverage:
+<programlisting>
+_CLASS_OPAQUE_REFCOUNTED(Coverage, PangoCoverage, pango_coverage_new, pango_coverage_ref, pango_coverage_unref)
 </programlisting>
 </para>
 </sect3>
