@@ -29,7 +29,7 @@ namespace Gtk
  */
 class RecentInfo
 {
-  _CLASS_BOXEDTYPE(RecentInfo, GtkRecentInfo, NONE, gtk_recent_info_ref, gtk_recent_info_unref)
+  _CLASS_OPAQUE_REFCOUNTED(RecentInfo, GtkRecentInfo, NONE, gtk_recent_info_ref, gtk_recent_info_unref)
   _IGNORE(gtk_recent_info_ref, gtk_recent_info_unref)
 public:
   bool equal(const RecentInfo& other) const;
