@@ -1,3 +1,13 @@
+2006-07-26  Murray Cumming  <murrayc@murrayc.com>
+
+	* gtk/src/recentinfo.hg: Use _CLASS_OPAQUE_REFCOUNTED instead of 
+	_CLASS_OPAQUE_COPYABLE(), because this struct has ref/unref instead 
+	of copy/free. This causes the reference() and unreference() methods 
+	to generated.
+	* examples/book/printing/advanced/printformoperation.cc: 
+	Wrapping C libraries section: Correct the _CLASS_OPAQUE_COPYABLE 
+	section and mention _CLASS_OPAQUE_REFCOUNTED.
+
 2006-07-25  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
 
 	* examples/book/recent_files/examplewindow.cc:
